2009-10-25  Roland Clobus <rclobus@bigfoot.com>
	* xmldocs.make, omf.make: Synchronized with gnome-common, to remove
	warnings.

2009-10-15  Roland Clobus <rclobus@bigfoot.com>
	* client/gtk/interface.c: No beep after the robber has moved.
	* client/gtk/gui.c: Fix double keyboard shortcut in Game menu.
	* common/gtk/theme.c, client/gtk/data/themes/Iceland/theme.cfg,
	client/gtk/data/themes/FreeCIV-like/theme.cfg,
	client/gtk/data/themes/Makefile.am: Remove special handling of old
	default theme.
	* client/gtk/data/themes/*.png: Removed, because not used anymore.

2009-09-30  Roland Clobus <rclobus@bigfoot.com>
	* client/gtk/gui.h: Add extra debug information.

2009-09-26  Roland Clobus <rclobus@bigfoot.com>
	* common/gtk/theme.c: Only add the default theme when no other theme
	has been added.
	* client/gtk/data/themes/FreeCIV-like/Makefile.am,
	client/gtk/data/themes/FreeCIV-like/gold.png,
	client/gtk/data/themes/Iceland.am,
	client/gtk/data/themes/Iceland/board.png,
	client/gtk/data/themes/Iceland/sea.png: Add and mention the images
	that are shared from the (old) default theme.
	* client/gtk/data/themes/Makefile.am: Mention the Classic theme.
	* client/gtk/data/themes/Classic/*: Added the Classic theme (the
	images are from client/gtk/data/themes) 

2009-09-22  Roland Clobus <rclobus@bigfoot.com>
	* editor/gtk/game-resources.c, editor/gtk/game-devcards.c,
	editor/gtk/game-buildings.c, common/gtk/game-settings.c,
	client/gtk/admin-gtk.c, client/gtk/connect.c: Set sensible page
	increment and set page_size to zero for all GtkAdjustments, to avoid
	warnings on the console.
	* docs/pioneers-meta-server.6: Added all commandline options, updated
	the BUGS section.
	* meta-server/main.c: Write a pid file, based on patch #2813162,
	written by Bas Wijnen.

2009-09-16  Roland Clobus <rclobus@bigfoot.com>
	* common/gtk/theme.c, docs/pioneers.6: Scan for user themes in 
	$XDG_DATA_HOME/pioneers/themes, based on patch #1939885 written by