@@ -155,27 +155,31 @@ Section "!Minimal install" SEC01
   File "..\..\..\local\pixmaps\pioneers\style-human-7.png"
 ; Themes
   SetOutPath "$INSTDIR\themes"
-  File "..\..\..\local\themes\board.png"
-  File "..\..\..\local\themes\desert.png"
-  File "..\..\..\local\themes\field.png"
-  File "..\..\..\local\themes\forest.png"
-  File "..\..\..\local\themes\gold.png"
-  File "..\..\..\local\themes\hill.png"
-  File "..\..\..\local\themes\mountain.png"
-  File "..\..\..\local\themes\pasture.png"
-  File "..\..\..\local\themes\plain.png"
-  File "..\..\..\local\themes\sea.png"
+  SetOutPath "$INSTDIR\themes\Classic"
+  File "..\..\..\local\themes\Classic\board.png"
+  File "..\..\..\local\themes\Classic\desert.png"
+  File "..\..\..\local\themes\Classic\field.png"
+  File "..\..\..\local\themes\Classic\forest.png"
+  File "..\..\..\local\themes\Classic\gold.png"
+  File "..\..\..\local\themes\Classic\hill.png"
+  File "..\..\..\local\themes\Classic\mountain.png"
+  File "..\..\..\local\themes\Classic\pasture.png"
+  File "..\..\..\local\themes\Classic\plain.png"
+  File "..\..\..\local\themes\Classic\sea.png"
+  File "..\..\..\local\themes\Classic\theme.cfg"
   SetOutPath "$INSTDIR\themes\FreeCIV-like"
   File "..\..\..\local\themes\FreeCIV-like\board.png"
   File "..\..\..\local\themes\FreeCIV-like\desert.png"
   File "..\..\..\local\themes\FreeCIV-like\field.png"
   File "..\..\..\local\themes\FreeCIV-like\forest.png"
+  File "..\..\..\local\themes\FreeCIV-like\gold.png"
   File "..\..\..\local\themes\FreeCIV-like\hill.png"
   File "..\..\..\local\themes\FreeCIV-like\mountain.png"
   File "..\..\..\local\themes\FreeCIV-like\pasture.png"
   File "..\..\..\local\themes\FreeCIV-like\sea.png"
   File "..\..\..\local\themes\FreeCIV-like\theme.cfg"
   SetOutPath "$INSTDIR\themes\Iceland"
+  File "..\..\..\local\themes\Iceland\board.png"
   File "..\..\..\local\themes\Iceland\desert.png"
   File "..\..\..\local\themes\Iceland\field_grain.png"
   File "..\..\..\local\themes\Iceland\forest_lumber.png"
@@ -183,6 +187,7 @@ Section "!Minimal install" SEC01
   File "..\..\..\local\themes\Iceland\hill_brick.png"
   File "..\..\..\local\themes\Iceland\mountain_ore.png"
   File "..\..\..\local\themes\Iceland\pasture_wool.png"
+  File "..\..\..\local\themes\Iceland\sea.png"
   File "..\..\..\local\themes\Iceland\theme.cfg"
   SetOutPath "$INSTDIR\themes\Tiny"
   File "..\..\..\local\themes\Tiny\board.png"
@@ -345,6 +350,7 @@ Section Uninstall
   Delete "$INSTDIR\themes\Tiny\brick-lorindol.png"
   Delete "$INSTDIR\themes\Tiny\board.png"
   Delete "$INSTDIR\themes\Iceland\theme.cfg"
+  Delete "$INSTDIR\themes\Iceland\sea.png"
   Delete "$INSTDIR\themes\Iceland\pasture_wool.png"
   Delete "$INSTDIR\themes\Iceland\mountain_ore.png"
   Delete "$INSTDIR\themes\Iceland\hill_brick.png"
@@ -352,11 +358,13 @@ Section Uninstall
   Delete "$INSTDIR\themes\Iceland\forest_lumber.png"
   Delete "$INSTDIR\themes\Iceland\field_grain.png"
   Delete "$INSTDIR\themes\Iceland\desert.png"
+  Delete "$INSTDIR\themes\Iceland\board.png"
   Delete "$INSTDIR\themes\FreeCIV-like\theme.cfg"
   Delete "$INSTDIR\themes\FreeCIV-like\sea.png"
   Delete "$INSTDIR\themes\FreeCIV-like\pasture.png"
   Delete "$INSTDIR\themes\FreeCIV-like\mountain.png"
   Delete "$INSTDIR\themes\FreeCIV-like\hill.png"
+  Delete "$INSTDIR\themes\FreeCIV-like\gold.png"
   Delete "$INSTDIR\themes\FreeCIV-like\forest.png"
   Delete "$INSTDIR\themes\FreeCIV-like\field.png"
   Delete "$INSTDIR\themes\FreeCIV-like\desert.png"
